--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,18 @@
 {
     "name": "zendframework/skeleton-application",
-    "description": "Skeleton Application for ZF2",
+    "description": "A blog cms",
     "license": "BSD-3-Clause",
     "keywords": [
         "framework",
-        "zf2"
+        "zf2",
+	"blog",
+	"cms"
     ],
     "homepage": "http://framework.zend.com/",
     "require": {
         "php": ">=5.5",
-        "zendframework/zendframework": "~2.5"
+        "zendframework/zendframework": "~2.5",
+        "doctrine/doctrine-orm-module": "^0.9.2",
+        "hounddog/doctrine-data-fixture-module": "^0.0.4"
     }
 }
