--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "php": ">=5.5",
         "zendframework/zendframework": "~2.5",
         "doctrine/doctrine-orm-module": "^0.9.2",
-        "hounddog/doctrine-data-fixture-module": "^0.0.4"
+        "hounddog/doctrine-data-fixture-module": "^0.0.4",
+        "zendframework/zftool": "dev-master"
     }
 }
