--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "zendframework/zendframework": "~2.5",
         "doctrine/doctrine-orm-module": "^0.9.2",
         "hounddog/doctrine-data-fixture-module": "^0.0.4",
-        "zendframework/zftool": "dev-master"
+        "zendframework/zftool": "dev-master",
+        "zendframework/zend-developer-tools": "dev-master"
     }
 }
