--- a/config/autoload/local.php.dist
+++ b/config/autoload/local.php.dist
@@ -21,5 +21,11 @@ return array(
                 )
             )
         )
-    )
+    ),
+
+'zfctwig' => [
+    'environment_options' => [
+       'debug' => true,
+    ]
+]
 );
